--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.11.0",
+    "react-router-dom": "^6.11.0",
     "remixicon": "^3.2.0"
   },
   "devDependencies": {
