--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.11.0",
     "react-router-dom": "^6.11.0",
+    "reactstrap": "^9.1.9",
     "remixicon": "^3.2.0"
   },
   "devDependencies": {
