--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "bootstrap": "^5.2.3",
     "framer-motion": "^10.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router": "^6.11.0",
     "react-router-dom": "^6.11.0",
     "reactstrap": "^9.1.9",
+    "redux": "^4.2.1",
     "remixicon": "^3.2.0"
   },
   "devDependencies": {
