--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^8.0.5",
     "react-router": "^6.11.0",
     "react-router-dom": "^6.11.0",
+    "react-toastify": "^9.1.3",
     "reactstrap": "^9.1.9",
     "redux": "^4.2.1",
     "remixicon": "^3.2.0"
