--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/stripe-js": "^1.54.1",
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "firebase": "^9.22.1",
     "framer-motion": "^10.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-razorpay": "^1.2.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
